Main layout done

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,5 +1,15 @@
-@primary-color: red;
-
-body {
-	background: @primary-color;
-}
+@import "base";
+@import "fonts";
+@import "variables";
+@import "header";
+@import "header_panel";
+@import "social_media";
+@import "tabs";
+@import "sublist";
+@import "futures";
+@import "process";
+@import "pricing";
+@import "testimonials";
+@import "pralax";
+@import "contact_us";
+@import "footer";
