--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,15 +1,15 @@
-@import "base";
-@import "fonts";
-@import "variables";
-@import "header";
-@import "header_panel";
-@import "social_media";
-@import "tabs";
-@import "sublist";
-@import "futures";
-@import "process";
-@import "pricing";
-@import "testimonials";
-@import "pralax";
-@import "contact_us";
-@import "footer";
+@import "base/base";
+@import "base/fonts";
+@import "base/variables";
+@import "sections/header";
+@import "sections/header_panel";
+@import "sections/social_media";
+@import "sections/tabs";
+@import "sections/sublist";
+@import "sections/futures";
+@import "sections/process";
+@import "sections/pricing";
+@import "sections/testimonials";
+@import "sections/prallax";
+@import "sections/contact_us";
+@import "sections/footer";
