--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -25,6 +25,12 @@
   transform: rotate(360deg);
 }
 
+.scale {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
 .box-shadow {
   -webkit-box-shadow: 0px 26px 34px -23px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 26px 34px -23px rgba(0,0,0,0.75);
