--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -65,6 +65,13 @@ img {
   margin: 0 auto;
 }
 
+.container-menu {
+  max-width: 1400px;
+  padding: 0 15px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .overflow-h {
   overflow: hidden;
 }
@@ -206,6 +213,10 @@ img {
 
 .width-1-3 {
   width: 33.333333%;
+}
+
+.width-1-4 {
+  width: 25%;
 }
 
 .width-2-3 {
