Responsive, mobile menu, write README

--- a/src/less/sections/contact_us.less
+++ b/src/less/sections/contact_us.less
@@ -10,3 +10,14 @@
     }
   }
 }
+
+// Media
+
+.contact-us {
+  padding: 100px 0;
+  form {
+    input, textarea {
+      margin: 0 auto 35px auto;
+    }
+  }
+}
