--- a/src/less/sections/futures.less
+++ b/src/less/sections/futures.less
@@ -5,3 +5,18 @@
     max-width: 475px;
   }
 }
+
+// Media
+@media (max-width: 991px) {
+  .futures {
+    .text-wrap {
+      max-width: 100%;
+      h2 {
+        text-align: center;
+      }
+    }
+    .img-wrap {
+      text-align: center;
+    }
+  }
+}
