--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -60,16 +60,18 @@ img {
 
 .container {
   max-width: 1100px;
-  padding: 0 15px;
-  width: 100%;
-  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container-menu {
-  max-width: 1400px;
-  padding: 0 15px;
-  width: 100%;
-  margin: 0 auto;
+  max-width: 1260px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .overflow-h {
@@ -112,7 +114,15 @@ img {
   font-family: @main-font-semibild;
   font-weight: 400px;
   text-align: center;
-  border: none;
+  border: 1px solid @secondary;
+  //border: none;
+  cursor: pointer;
+  .transition;
+  &:hover {
+    background: transparent;
+    color: @secondary;
+    border: 1px solid @secondary;
+  }
 }
 
 .btn-simple {
@@ -294,4 +304,25 @@ img {
 
 .hide {
   display: none !important;
+}
+
+@media (max-width: 991px) {
+  section {
+    padding: 50px 0 !important;
+  }
+  .width-1-2, .width-1-3, .width-1-4, .width-2-3   {
+    width: 100%;
+  }
+  .float-l, .float-r {
+    float: none;
+  }
+  .title-decor {
+    &:after {
+      margin: 30px auto 0 auto;
+    }
+  }
+}
+
+.visible {
+  display: block !important;
 }
