--- a/src/less/sections/menu.less
+++ b/src/less/sections/menu.less
@@ -9,6 +9,10 @@
   width: 100%;
   ul {
     li {
+      &:hover {
+        background: none;
+        //color: @secondary;
+      }
       a {
         padding: 0;
         color: @gray-text;
@@ -41,4 +45,41 @@
     }
   }
 }
+
+// Media
+
+@media (max-width: 991px) {
+  .sub-menu-hidden {
+    position: static;
+  }
+
+  .sub-menu-hidden {
+    padding: 0;
+    ul {
+      li {
+        &:hover {
+          background: none;
+        }
+        a {
+          font-size: 14px;
+        }
+      }
+    }
+    .top-links {
+      overflow: hidden;
+      li {
+        width: 50%;
+        float: left;
+      }
+    }
+    .sub-menu {
+      column-count: 1;
+      border-bottom: 1px solid @secondary;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+    }
+  }
+
+}
+
 
