--- a/src/less/sections/social_media.less
+++ b/src/less/sections/social_media.less
@@ -15,3 +15,17 @@
     line-height: 20px;
   }
 }
+
+// Media
+
+@media (max-width: 991px) {
+  .social-media {
+    text-align: center;
+    .text {
+      margin-bottom: 20px;
+    }
+    .social-icons li {
+      margin: 0 20px 10px 0;
+    }
+  }
+}
