--- a/src/less/sections/sublist.less
+++ b/src/less/sections/sublist.less
@@ -28,3 +28,19 @@
     }
   }
 }
+
+// Media 
+@media (max-width: 991px) {
+  .sublist {
+    .img-wrap {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .list-wrap {
+      max-width: 100%;
+      h2 {
+        text-align: center;
+      }
+    }
+  }
+}
