--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -10,319 +10,381 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
-  margin:0;
-  padding:0;
-  border:0;
-  outline:0;
-  font-size:100%;
-  vertical-align:baseline;
-  background:transparent;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 body {
-  line-height:1;
+	line-height: 1;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-  display:block;
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 
 nav ul {
-  list-style:none;
+	list-style: none;
 }
 
 blockquote, q {
-  quotes:none;
+	quotes: none;
 }
 
 a {
-  margin:0;
-  padding:0;
-  font-size:100%;
-  vertical-align:baseline;
-  background:transparent;
-  color: inherit;
-  text-decoration: none;
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+	color: inherit;
+	text-decoration: none;
 }
 
 input, select {
-  vertical-align:middle;
+	vertical-align: middle;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 .container {
-  max-width: 1100px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+	max-width: 1100px;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .container-menu {
-  max-width: 1260px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+	max-width: 1260px;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .overflow-h {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .float-r {
-  float: right;
+	float: right;
 }
 
 .float-l {
-  float: left;
+	float: left;
+}
+
+.d-flex {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.d-flex-descktop {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.justify-flex-end-descktop {
+	justify-content: flex-end;
+}
+
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
+.justify-between {
+	justify-content: space-between;
 }
 
 .accent-text {
-  color: @secondary;
+	text-transform: uppercase;
+	color: @secondary;
 }
 
 .form-input {
-  width: 100%;
-  display: block;
-  border: none;
-  color: @form-text;
-  font-family: @main-font;
-  font-size: 14px;
-  font-weight: 400;
-  padding: 10px;
-  margin-bottom: 35px;
-  outline: none;
-  background: transparent;
-  box-shadow: 0 1px 0 rgba(0, 0, 1, 0.16);
-  &:focus {
-    border-bottom: 1px solid @secondary;
-  }
+	width: 100%;
+	display: block;
+	border: none;
+	color: @form-text;
+	font-family: @main-font;
+	font-size: 14px;
+	font-weight: 400;
+	padding: 10px;
+	margin-bottom: 35px;
+	outline: none;
+	background: transparent;
+	box-shadow: 0 1px 0 rgba(0, 0, 1, 0.16);
+
+	&:focus {
+		border-bottom: 1px solid @secondary;
+	}
 }
 
 .primary-btn {
-  background-color: @secondary;
-  color: @white;
-  font-family: @main-font-semibild;
-  font-weight: 400px;
-  text-align: center;
-  border: 1px solid @secondary;
-  //border: none;
-  cursor: pointer;
-  .transition;
-  &:hover {
-    background: transparent;
-    color: @secondary;
-    border: 1px solid @secondary;
-  }
+	background-color: @secondary;
+	color: @white;
+	font-family: @main-font-semibild;
+	font-weight: 400px;
+	text-align: center;
+	border: 1px solid @secondary;
+	//border: none;
+	cursor: pointer;
+	.transition;
+
+	&:hover {
+		background: transparent;
+		color: @secondary;
+		border: 1px solid @secondary;
+	}
 }
 
 .btn-simple {
-  display: inline-block;
-  padding: 15px 25px;
-  border-radius: 5px;
+	display: inline-block;
+	padding: 15px 25px;
+	border-radius: 5px;
 }
 
 .transparent-btn {
-  display: inline-block;
-  color: @white;
-  font-family: @main-font-semibild;
-  font-size: 15px;
-  font-weight: 400;
-  border: 2px solid @white;
-  padding: 15px 30px;
-  .transition;
-  &:hover {
-    background-color: @white;
-    color: @primary;
-  }
+	display: inline-block;
+	color: @white;
+	font-family: @main-font-semibild;
+	font-size: 15px;
+	font-weight: 400;
+	border: 2px solid @white;
+	padding: 15px 30px;
+	.transition;
+
+	&:hover {
+		background-color: @white;
+		color: @primary;
+	}
 }
 
 .title-decor {
-  margin-bottom: 30px;
-  &:after {
-    content: '';
-    display: block;
-    width: 64px;
-    height: 2px;
-    background: @secondary;
-    margin-top: 30px;
-  }
+	margin-bottom: 30px;
+
+	&:after {
+		content: '';
+		display: block;
+		width: 64px;
+		height: 2px;
+		background: @secondary;
+		margin-top: 30px;
+	}
 }
 
 .decor-center {
-  &:after {
-    margin: 30px auto 0 auto;
-  }
+	&:after {
+		margin: 30px auto 0 auto;
+	}
 }
 
 .decor-white {
-  &:after{
-    background: @white;
-  }
+	&:after {
+		background: @white;
+	}
 }
 
 .social-icons {
-  li {
-    display: inline-block;
-    margin-right: 60px;
-    .transition;
-    &:last-child {
-      margin-right: 0;
-    }
-    &:hover {
-      .rotate;
-    }
-    a {
-      display: inline-block;
-      height: 46px;
-      background-image: url("./assets/Social_Media_Icons.png");
-    }
-  }
-  .fb {
-    width: 25px;
-    background-position-x: 0;
-  }
-  .twitter {
-    width: 42px;
-    background-position-x: -87px;
-  }
-  .g-plus {
-    width: 45px;
-    background-position-x: -190px;
-  }
-  .pinterest {
-    width: 42px;
-    background-position-x: -282px;
-  }
-  .instagram {
-    width: 45px;
-    background-position-x: -382px;
-  }
-  .stumbleupon {
-    width: 52px;
-    background-position-x: -484px;
-  }
-  .rss {
-    width: 39px;
-    background-position-x: 39px;
-  }
+	li {
+		display: inline-block;
+		margin-right: 60px;
+		.transition;
+
+		&:last-child {
+			margin-right: 0;
+		}
+
+		&:hover {
+			.rotate;
+		}
+
+		a {
+			display: inline-block;
+			height: 46px;
+			background-image: url("./assets/Social_Media_Icons.png");
+		}
+	}
+
+	.fb {
+		width: 25px;
+		background-position-x: 0;
+	}
+
+	.twitter {
+		width: 42px;
+		background-position-x: -87px;
+	}
+
+	.g-plus {
+		width: 45px;
+		background-position-x: -190px;
+	}
+
+	.pinterest {
+		width: 42px;
+		background-position-x: -282px;
+	}
+
+	.instagram {
+		width: 45px;
+		background-position-x: -382px;
+	}
+
+	.stumbleupon {
+		width: 52px;
+		background-position-x: -484px;
+	}
+
+	.rss {
+		width: 39px;
+		background-position-x: 39px;
+	}
 }
 
 .width-1-2 {
-  width: 50%;
+	width: 50%;
 }
 
 .width-1-3 {
-  width: 33.333333%;
+	width: 33.333333%;
 }
 
 .width-1-4 {
-  width: 25%;
+	width: 25%;
 }
 
 .width-2-3 {
-  width: 66.66666666666666666%;
+	width: 66.66666666666666666%;
 }
 
 .title-small {
-  color: @dark-text-primary;
-  font-family: @main-font;
-  font-size: 20px;
-  font-weight: 700;
+	color: @dark-text-primary;
+	font-family: @main-font;
+	font-size: 20px;
+	font-weight: 700;
 }
 
 .title-large {
-  color: @dark-text-primary;
-  font-family: @secondary-font;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 43px;
-  text-transform: uppercase;
+	color: @dark-text-primary;
+	font-family: @secondary-font;
+	font-size: 36px;
+	font-weight: 400;
+	line-height: 43px;
+	text-transform: uppercase;
 }
 
 .paragraph-style {
-  color: @gray-text;
-  font-family: @main-font;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  margin-bottom: 20px;
+	color: @gray-text;
+	font-family: @main-font;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	margin-bottom: 20px;
 }
 
 .margin-t-15 {
-  margin-top: 15px;
+	margin-top: 15px;
 }
 
 .margin-b-30 {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .margin-b-80 {
-  margin-bottom: 80px;
+	margin-bottom: 80px;
+}
+
+.margin-l-20 {
+	margin-left: 20px;
 }
 
 .padding-b-40 {
-  padding-bottom: 40px;
+	padding-bottom: 40px;
 }
 
 .padding-0-15 {
-  padding: 0 15px;
+	padding: 0 15px;
 }
 
 .shadow-img {
-  .box-shadow;
+	.box-shadow;
 }
 
 .text-align-r {
-  text-align: right;
+	text-align: right;
 }
 
 .text-align-l {
-  text-align: left;
+	text-align: left;
 }
 
 .text-align-c {
-  text-align: center;
+	text-align: center;
 }
 
 .white-text {
-  color: @white;
+	color: @white;
 }
 
 .display {
-  display: block !important;
+	display: block !important;
 }
 
 .hide {
-  display: none !important;
+	display: none !important;
 }
 
 @media (max-width: 991px) {
-  section {
-    padding: 50px 0 !important;
-  }
-  .width-1-2, .width-1-3, .width-1-4, .width-2-3   {
-    width: 100%;
-  }
-  .float-l, .float-r {
-    float: none;
-  }
-  .title-decor {
-    &:after {
-      margin: 30px auto 0 auto;
-    }
-  }
+	section {
+		padding: 50px 0 !important;
+	}
+
+	.width-1-2, .width-1-3, .width-1-4, .width-2-3 {
+		width: 100%;
+	}
+
+	.float-l, .float-r {
+		float: none;
+	}
+
+	.d-flex-descktop {
+		display: block;
+	}
+
+	.title-decor {
+		&:after {
+			margin: 30px auto 0 auto;
+		}
+	}
+
+	.justify-center-device {
+		justify-content: center;
+	}
+}
+
+.text-upper {
+	text-transform: uppercase;
 }
 
 .visible {
-  display: block !important;
+	display: block !important;
 }
