--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -15,25 +15,25 @@
 
 //Mixins
 .transition {
-  -webkit-transition: ease-out 0.3s;
-  transition: ease-out 0.3s;
+	-webkit-transition: ease-out 0.3s;
+	transition: ease-out 0.3s;
 }
 
 
 .rotate {
-  -ms-transform: rotate(360deg);
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	transform: rotate(360deg);
 }
 
 .scale {
-  -ms-transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 .box-shadow {
-  -webkit-box-shadow: 0px 26px 34px -23px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 26px 34px -23px rgba(0,0,0,0.75);
-  box-shadow: 0px 26px 34px -23px rgba(0,0,0,0.75);
+	-webkit-box-shadow: 0px 26px 34px -23px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 0px 26px 34px -23px rgba(0, 0, 0, 0.75);
+	box-shadow: 0px 26px 34px -23px rgba(0, 0, 0, 0.75);
 }
