--- a/src/less/sections/contact_us.less
+++ b/src/less/sections/contact_us.less
@@ -1,23 +1,25 @@
 .contact-us {
-  padding: 100px 0;
-  form {
-    input {
-      width: 500px;
-    }
-    textarea {
-      padding: 10px 10px 6px 10px;
-      width: 500px;
-    }
-  }
+	padding: 100px 0;
+
+	.contact-form {
+		.input {
+			width: 500px;
+		}
+
+		.textarea {
+			padding: 10px 10px 6px 10px;
+			width: 500px;
+		}
+	}
 }
 
 // Media
-
 .contact-us {
-  padding: 100px 0;
-  form {
-    input, textarea {
-      margin: 0 auto 35px auto;
-    }
-  }
+	padding: 100px 0;
+
+	.contact-form {
+		.input, .textarea {
+			margin: 0 auto 35px auto;
+		}
+	}
 }
