--- a/src/less/sections/header.less
+++ b/src/less/sections/header.less
@@ -1,97 +1,103 @@
 .main-header {
-  background: @primary;
-  .burger {
-    display: none;
-    padding: 20px 0;
-    cursor: pointer;
-    span {
-      display: block;
-      width: 33px;
-      height: 4px;
-      margin-bottom: 5px;
-      position: relative;
-      background: @white;
-      z-index: 1;
-    }
-  }
+	background: @primary;
+
+	.burger {
+		display: none;
+		padding: 20px 0;
+		cursor: pointer;
+
+		span {
+			display: block;
+			width: 33px;
+			height: 4px;
+			margin-bottom: 5px;
+			position: relative;
+			background: @white;
+			z-index: 1;
+		}
+	}
 }
 
 .main-logo {
-  line-height: normal;
-  max-height: 30px;
-  padding : 20px 0;
-  float: left;
-  h1 { // Site always need h1 title
-    position: absolute;
-    z-index: -999999999999999;
-  }
+	line-height: normal;
+	max-height: 30px;
+	padding: 20px 0;
+	float: left;
 }
 
 .main-nav {
-  line-height: 30px;
-  vertical-align: middle;
-  ul {
-    li {
-      display: inline-block;
-      color: @gray-text;
-      font-family: @main-font-semibild;
-      font-size: 14px;
-      font-weight: 400;
-      .transition;
-      &:last-child {
-        margin-right: 0;
-      }
-      &:hover {
-        background-color: @secondary;
-        color: @white;
-      }
-      a {
-        display: block;
-        padding: 20px 20px;
-        &:hover {
-          background-color: @secondary;
-          color: @white;
-        }
-      }
-    }
-  }
+	line-height: 30px;
+	vertical-align: middle;
+
+	.menu-list {
+		li {
+			display: inline-block;
+			color: @gray-text;
+			font-family: @main-font-semibild;
+			font-size: 14px;
+			font-weight: 400;
+			.transition;
+
+			&:last-child {
+				margin-right: 0;
+			}
+
+			&:hover {
+				background-color: @secondary;
+				color: @white;
+			}
+
+			a {
+				display: block;
+				padding: 20px 20px;
+
+				&:hover {
+					background-color: @secondary;
+					color: @white;
+				}
+			}
+		}
+	}
 }
 
 // Media
 @media (max-width: 991px) {
-  .main-header {
-    .burger {
-      display: block;
-      float: right;
-    }
+	.main-header {
+		.burger {
+			display: block;
+			float: right;
+		}
 
-    .main-nav {
-      display: none;
-      position: absolute;
-      top: 70px;
-      left: 0;
-      right: 0;
-      background: @white;
-      z-index: 1000;
-      ul {
-        text-align: center;
-        li {
-          font-size: 16px;
-          display: block;
-        }
-      }
-    }
-  }
+		.main-nav {
+			display: none;
+			position: absolute;
+			top: 70px;
+			left: 0;
+			right: 0;
+			background: @white;
+			z-index: 1000;
+
+			.menu-list {
+				text-align: center;
+
+				li {
+					font-size: 16px;
+					display: block;
+				}
+			}
+		}
+	}
 }
 
 @media (min-width: 992px) {
-  .submenu-isset {
-    .transition;
-    &:hover {
-      .sub-menu-hidden {
-        display: block;
-      }
-    }
-  }
+	.submenu-isset {
+		.transition;
+
+		&:hover {
+			.sub-menu-hidden {
+				display: block;
+			}
+		}
+	}
 }
 
