--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -119,6 +119,14 @@ img {
 	color: @secondary;
 }
 
+.flex-direction-column {
+	flex-direction: column;
+}
+
+.align-items-center {
+	align-items: center;
+}
+
 .form-input {
 	width: 100%;
 	display: block;
