--- a/src/less/sections/header.less
+++ b/src/less/sections/header.less
@@ -6,7 +6,7 @@
 		padding: 20px 0;
 		cursor: pointer;
 
-		span {
+		.burger-line {
 			display: block;
 			width: 33px;
 			height: 4px;
@@ -30,7 +30,7 @@
 	vertical-align: middle;
 
 	.menu-list {
-		li {
+		.menu-list-item {
 			display: inline-block;
 			color: @gray-text;
 			font-family: @main-font-semibild;
@@ -47,7 +47,7 @@
 				color: @white;
 			}
 
-			a {
+			.menu-link {
 				display: block;
 				padding: 20px 20px;
 
@@ -80,7 +80,7 @@
 			.menu-list {
 				text-align: center;
 
-				li {
+				.menu-list-item {
 					font-size: 16px;
 					display: block;
 				}
