--- a/src/less/sections/sublist.less
+++ b/src/less/sections/sublist.less
@@ -6,7 +6,7 @@
 	}
 
 	.list {
-		li {
+		.list-item {
 			position: relative;
 			padding-left: 70px;
 			margin-bottom: 20px;
@@ -18,7 +18,7 @@
 				left: 0;
 			}
 
-			h3 {
+			.list-title {
 				color: @dark-text-primary;
 				font-family: @main-font-semibild;
 				font-size: 14px;
@@ -27,7 +27,7 @@
 				margin-bottom: 5px;
 			}
 
-			p {
+			.paragraph-style {
 				margin-bottom: 30px;
 			}
 		}
@@ -45,7 +45,7 @@
 		.list-wrap {
 			max-width: 100%;
 
-			h2 {
+			.list-title {
 				text-align: center;
 			}
 		}
