--- a/src/less/sections/tabs.less
+++ b/src/less/sections/tabs.less
@@ -9,7 +9,7 @@
 	.tabs-nav {
 		width: 112px;
 
-		li {
+		.tab-button {
 			line-height: 112px;
 			vertical-align: middle;
 			background-color: @primary;
@@ -44,7 +44,7 @@
 		padding-right: 50px;
 		display: none;
 
-		h2 {
+		.tab-title {
 			color: @black;
 			font-family: @main-font;
 			font-size: 20px;
@@ -52,7 +52,7 @@
 			margin-bottom: 50px;
 		}
 
-		p {
+		.paragraph-style {
 			max-width: 450px;
 		}
 
@@ -75,7 +75,7 @@
 			text-align: center;
 			margin-bottom: 50px;
 
-			li {
+			.tab-button {
 				display: inline-block;
 				width: 32%;
 				line-height: 50px;
@@ -98,11 +98,11 @@
 		.item {
 			padding: 0;
 
-			h2 {
+			.tab-title {
 				margin-bottom: 20px;
 			}
 
-			p {
+			.paragraph-style {
 				max-width: 100%;
 				margin-bottom: 10px;
 			}
