--- a/src/less/sections/testimonials.less
+++ b/src/less/sections/testimonials.less
@@ -28,7 +28,7 @@
 			border-top: 15px solid @accent-gray;
 		}
 
-		p {
+		.paragraph-style {
 			margin: 0;
 		}
 	}
@@ -48,18 +48,8 @@
 			margin-bottom: 5px;
 		}
 
-		p {
+		.paragraph-style {
 			margin: 0;
-		}
-	}
-}
-
-// Media
-
-@media (max-width: 991px) {
-	.testimonial-slider {
-		li {
-			float: left;
 		}
 	}
 }
